--- a/SocialNetworkExercise.Test/SocialNetworkExercise.Test.csproj
+++ b/SocialNetworkExercise.Test/SocialNetworkExercise.Test.csproj
@@ -66,7 +66,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ProgramUnitTest.cs" />
+    <Compile Include="ConsoleServiceUnitTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
