--- a/SocialNetworkExercise.Test/SocialNetworkExercise.Test.csproj
+++ b/SocialNetworkExercise.Test/SocialNetworkExercise.Test.csproj
@@ -67,6 +67,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConsoleServiceUnitTest.cs" />
+    <Compile Include="CommandServiceUnitTest.cs" />
     <Compile Include="DataServiceUnitTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
