--- a/SocialNetworkExercise/SocialNetworkExercise.csproj
+++ b/SocialNetworkExercise/SocialNetworkExercise.csproj
@@ -54,12 +54,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Enums\CommandEnum.cs" />
+    <Compile Include="Configuration\Configuration.cs" />
+    <Compile Include="Models\Enums\CommandEnum.cs" />
     <Compile Include="Models\Command.cs" />
+    <Compile Include="Extensions\CommandExtensions.cs" />
+    <Compile Include="Extensions\PostExtensions.cs" />
+    <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="Models\Post.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Resources\Resources.cs" />
     <Compile Include="Services\CommandService.cs" />
     <Compile Include="Services\DataService.cs" />
     <Compile Include="ServiceContract\ICommandService.cs" />
